解决optimizeJoinOfCountSql反序列化不支持问题.